# jpmapper-lidar

./: .gitignore  .pre-commit-config.yaml  CLI_HELP_ENHANCEMENTS.md  CONTRIBUTING.md  DEPENDENCY_UPDATES.md  ENHANCEMENT_COMPLETION.md  LICENSE  MANIFEST.in  METADATA_ENHANCEMENT_SUMMARY.md  README.md  analyze_density.py  analyze_meshscope.py  debug_dsm.py  debug_osm.py  examine_metadata.py  jpmapper-boxfilter.py  jpmapper-lidar.py  jpmapper-rasterize.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_analysis_map_osm.py  test_analysis_run.py  test_color_coded_map.py  test_enhanced_map_fix.py  test_improved_analysis.py  test_map_render.py  test_metadata_enhancements.py  test_missing_deps.py  test_points.csv  verify_installation.py
.github/workflows/: docs.yml  tests.yml
benchmarks/: __init__.py  api_benchmarks.py  benchmark.py  compare_benchmarks.py  core.py  memory_profiler.py  real_data_benchmarks.py
docs/: README.md  requirements.txt
examples/: api_example.py  benchmark_example.py  demo_metadata_benefits.py  shapefile_example.py
jpmapper/: __init__.py  config.py  exceptions.py  init.py  logging.py
jpmapper/analysis/: __init__.py  los.py  los.py.fixed  plots.py
jpmapper/api/: __init__.py  analysis.py  enhanced_raster.py  filter.py  raster.py  shapefile_filter.py
jpmapper/cli/: __init__.py  analyze.py  analyze.py.new  analyze_utils.py  filter.py  filter_utils.py  init.py  main.py  rasterize.py
jpmapper/io/: __init__.py  init.py  las.py  metadata_raster.py  pdal_utils.py  raster.py
jpmapper/web/: __init__.py  app.py  models.py  routes.py
jpmapper/web/static/: app.js  index.html  style.css
old/geodata/: sample.las
old/samplepoints/: mesh_hub_nodes.csv
samplepoints/: mesh_hub_nodes.csv
tests/: conftest.py  test_analysis.py  test_analyze.py  test_api.py  test_api_comprehensive.py  test_cli.py  test_cli.py.new  test_config.py  test_end_to_end.py  test_exceptions.py  test_filter.py  test_integration_workflows.py  test_las_io.py  test_logging.py  test_los_coverage.py  test_metadata_raster.py  test_performance.py  test_raster_io.py  test_rasterize.py  test_shapefile.py  test_web.py
tests/data/: README.md  meshdb_points.csv  points.csv
tests/data/las/: NYC2021_LAS_Index.sbn  NYC2021_LAS_Index.sbx  NYC2021_LAS_Index.shp.xml  readme.txt
tests/data/nyc_dsm_cache.tmp-2e25ac2b-21184/: test_sample_SKIPPED.txt
tests/data/nyc_dsm_cache.tmp-32893d2a-54364/: 10227_SKIPPED.txt
tests/data/nyc_dsm_cache.tmp-32893d2a-55175/: test_sample_SKIPPED.txt
tests/data/nyc_dsm_cache.tmp-32893d2a-73486/: test_sample_SKIPPED.txt
tools/: README.md  diagnose_data_issues.py
