[project]
name = "jpmapper"
version = "0.1.0"
description = "LiDAR filtering, rasterisation, and link-analysis toolkit"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    # core
    "numpy>=1.24",
    "rasterio>=1.3",
    "rich>=13.0",
    "typer[all]>=0.9",
    "pandas>=2.0",
    "shapely>=2.0",
    "pdal>=3.0",     # PDAL Python bindings
    # analysis / visualisation
    "folium>=0.16",  # optional but included for --map-html
]

[project.scripts]
jpmapper = "jpmapper.cli.main:app"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
